corrects alignment of header at large screen size
and re-styles search form in the header.

--- a/css/style.css
+++ b/css/style.css
@@ -118,8 +118,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 970px;
     margin-left: auto;
     margin-right: auto;
@@ -129,6 +130,9 @@ body {
 
 @media screen and (min-width: 1260px) {
   .header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
@@ -300,6 +304,10 @@ body {
   font-weight: 500;
 }
 
+.burger:hover {
+  background-color: #262834;
+}
+
 .burger span {
   position: relative;
   display: inline-block;
@@ -352,138 +360,105 @@ body {
     -webkit-box-ordinal-group: 5;
         -ms-flex-order: 4;
             order: 4;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .search {
-    display: none;
-  }
-}
-
-.form-control {
-  background-color: rgba(0, 0, 0, 0.1);
-  padding: 0.75rem;
-  width: 100% !important;
-  font-weight: 500;
-  font-size: 0.9rem;
-}
-
-.form-control:hover {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.form-control:focus {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  outline: none;
-}
-
-#search-input {
-  border: 2px solid rgba(0, 0, 0, 0.1);
-  border-radius: 3px;
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08) inset;
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08) inset;
-  outline: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-#search-input::-webkit-input-placeholder {
-  color: #84858F;
-}
-
-#search-input:-ms-input-placeholder {
-  color: #84858F;
-}
-
-#search-input::-ms-input-placeholder {
-  color: #84858F;
-}
-
-#search-input::placeholder {
-  color: #84858F;
-}
-
-@media screen and (max-width: 768px) {
-  #search-input {
-    display: inline;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  #search-input {
-    display: inline;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  #search-input {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 1260px) {
-  #search-input {
-    display: inline;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  input[type=search] {
-    background-color: rgba(221, 221, 221, 0.8);
-  }
-}
-
-@media screen and (min-width: 768px) {
-  input[type=search] {
-    background-color: #fff;
-  }
-}
-
-.search-btn {
-  background: transparent;
-  border: none;
-  outline: none;
-}
-
-@media screen and (max-width: 768px) {
-  .search-btn {
-    position: absolute;
-    top: 110px;
-    right: 32px;
-  }
-  .search-btn i {
-    font-size: 1.25rem;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .search-btn {
-    background-color: #999AA2;
-    height: 47px;
     width: 63px;
-    position: relative;
-    bottom: 64px;
-    left: 173px;
+    height: 56px;
   }
-  .search-btn i {
-    color: #fff;
-    font-size: 1.5rem;
+}
+
+@media screen and (min-width: 1260px) {
+  .search-wrapper {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+    width: 303px;
+  }
+}
+
+form.search-form input[type=text] {
+  /* Style the search field */
+  padding: 5px 15px;
+  font-size: 17px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 80%;
+  height: 56px;
+  background: #fff;
+}
+
+@media screen and (max-width: 768px) {
+  form.search-form input[type=text] {
+    display: initial;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  form.search-form input[type=text] {
+    display: initial;
   }
 }
 
 @media screen and (min-width: 992px) {
-  .search-btn {
+  form.search-form input[type=text] {
     display: none;
   }
 }
 
 @media screen and (min-width: 1260px) {
-  .search-btn {
-    position: relative;
-    bottom: 100px;
-    left: 0px;
+  form.search-form input[type=text] {
+    border-radius: 0;
+    display: initial;
   }
+}
+
+form.search-form button {
+  /* Style the submit button */
+  float: left;
+  padding: 7px 20px 3px;
+  outline: none;
+  background: #999AA2;
+  color: white;
+  border: none;
+  border-radius: 0 3px 3px 0;
+  border-left: none;
+  /* Prevent double borders */
+  cursor: pointer;
+  text-align: center;
+  vertical-align: bottom;
+  overflow: visible;
+}
+
+@media screen and (min-width: 992px) {
+  form.search-form button {
+    border-radius: 3px;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  form.search-form button {
+    width: 20%;
+    height: 56px;
+  }
+}
+
+form.search-form button:hover {
+  background: #84858F;
+}
+
+form.search-form button i {
+  font-size: 23px;
+  line-height: 1;
+  width: 23px;
+  height: 46px;
+  padding: 9px 0 3px 0;
+}
+
+form.search-form::after {
+  /* Clear floats */
+  content: "";
+  clear: both;
+  display: table;
 }
 
 .support-wrapper {
@@ -541,7 +516,7 @@ body {
 
 @media screen and (min-width: 992px) {
   .support-wrapper {
-    display: inline;
+    display: initial;
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
@@ -557,7 +532,7 @@ body {
 
 @media screen and (min-width: 1260px) {
   .support-wrapper {
-    display: inline;
+    display: initial;
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
@@ -619,7 +594,7 @@ body {
 
 @media screen and (min-width: 992px) {
   .contact-wrapper {
-    display: inline;
+    display: initial;
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
             order: 3;
@@ -635,7 +610,7 @@ body {
 
 @media screen and (min-width: 1260px) {
   .contact-wrapper {
-    display: inline;
+    display: initial;
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
             order: 3;
